--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -575,14 +575,14 @@ for which an actual implementation of the validation of constraints types does n
 	  \scriptsize
 		\begin{tabular}{l|c|c}
       %\textbf{Expressivity Class} & $Expr(\overline{\mathcal{CT}_R})$ (42) & $Expr(\mathcal{CT}_R)$ (32) \\		
-			\textbf{} & $Expr(\overline{\mathcal{R}})$ (\textcolor{red}{46}) & $Expr(\mathcal{R})$ (\textcolor{red}{35}) \\	
+			\textbf{} & $Expr(\overline{\mathcal{R}})$ (46) & $Expr(\mathcal{R})$ (35) \\	
       \hline
 			\emph{DSP} & 6 & 8 \\
-			\emph{OWL2-DL} & 18(4) & 29 \\ 
-			\emph{OWL2-QL} & 7(4) & 11 \\
-			\emph{ReSh} & 8 & 11(2) \\
+			\emph{OWL2-DL} & 17(4) & 34 \\ 
+			\emph{OWL2-QL} & 5(4) & 11 \\
+			\emph{ReSh} & 7 & 5(9) \\
 			\emph{ShEx} & 12 & 11(1) \\
-			\emph{SPIN} & 41(1)	& 32
+			\emph{SPIN} & 45(1)	& 35
 		\end{tabular}
 	\label{tab:constraint-type-specific-expressivity}
 \end{table}
